welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:8: error: b is already defined as value b
 	case(a,b,b) if(a+10<b || a+10<c) => return true
                 ^